# linear-mcp

./: README.md  pyproject.toml
linear_mcp/: __init__.py  server.py
