[project]
name = "linear-mcp"
version = "0.1.0"
description = "Simple Linear MCP server for reading and updating issues"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
]

[project.scripts]
linear-mcp = "linear_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
